--- a/index.html
+++ b/index.html
@@ -96,6 +96,26 @@
             <button type="submit">Submit</button>
         </form>
     </section>
+  <footer style="background-color: #f1f1f1; padding: 20px; text-align: center;">
+    <div>
+      <h3>Contact Us</h3>
+      <p>Email: contact@example.com</p>
+      <p>Phone: +1 (123) 456-7890</p>
+    </div>
 
+    <div>
+      <h3>Follow Us</h3>
+      <ul style="list-style-type: none; padding: 0;">
+        <li><a href="#" style="text-decoration: none;">Facebook</a></li>
+        <li><a href="#" style="text-decoration: none;">Twitter</a></li>
+        <li><a href="#" style="text-decoration: none;">Instagram</a></li>
+        <li><a href="#" style="text-decoration: none;">LinkedIn</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <p>&copy; 2024 Your Website. All Rights Reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
